FINALLY revamp RElementValues, so now each type is its own class, more code clean, now i need to finish reimplementing the rest of things